--- a/src/style.css
+++ b/src/style.css
@@ -205,6 +205,11 @@ article > div.body {
     flex-basis: var(--article-min-width);
 }
 
+article > p {
+    margin: 0;
+    padding: 0;
+}
+
 article > img {
     margin-right: auto;
     flex-grow: 1;
