--- a/src/style.css
+++ b/src/style.css
@@ -107,7 +107,6 @@ p:last-child {
 
 a, a:active, a:visited {
     color: var(--link);
-    text-decoration: none;
 }
 
 a:focus {
@@ -171,6 +170,10 @@ header ul {
 header li {
     list-style: none;
     margin: auto 1em;
+}
+
+header a {
+    text-decoration: none;
 }
 
 footer {
